Fix navbar spacing

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -28,19 +28,19 @@
 }
 
 .Sidebar-book {
-  margin: 0 1.3em 0.1em 0;
+  margin: 0 1.5em 0.1em 0;
 
   vertical-align: middle;
 }
 
 .Sidebar-list {
-  margin: 0 1.3em 0.1em 0.2em;
+  margin: 0 1.5em 0.1em 0.2em;
 
   vertical-align: middle;
 }
 
 .Sidebar-session {
-  margin: 0 1.3em 0.1em 0.3em;
+  margin: 0 1.5em 0.1em 0.3em;
 
   vertical-align: middle;
 }
